--- a/Task5/package.json
+++ b/Task5/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.16.0"
   }
 }
